fix z-index

--- a/portfolio2/css/sections/about.css
+++ b/portfolio2/css/sections/about.css
@@ -5,7 +5,7 @@
     padding-bottom: var(--spacing-large);
     max-width: 1400px;
     margin: 0 auto;
-	z-index: 50;
+	z-index: 51;
 }
 .about-description{
 	position: relative;
